--- a/package.json
+++ b/package.json
@@ -12,31 +12,33 @@
     "db:migrate": "bunx prisma db push",
     "db:migrate-dev": "bunx prisma migrate dev"
   },
+  "author": "masb0ymas <n.fajri@mail.com>",
+  "license": "MIT",
   "dependencies": {
     "@headlessui/react": "^2.1.8",
-    "@prisma/client": "5.20.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@tabler/icons-react": "^3.17.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.446.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^5.20.0",
+    "@tabler/icons-react": "^3.18.0",
+    "lodash": "^4.17.21",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "react-hook-form": "^7.53.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/lodash": "^4.17.9",
+    "@types/node": "^22.7.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
-    "postcss": "^8",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8.4.47",
     "prisma": "^5.20.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.13",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
