--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:yourpassword@localhost:5432/yourdb?schema=public"
+
+NEXTAUTH_URL=http://localhost:3000/api/auth
+SECRET=
