--- a/package.json
+++ b/package.json
@@ -16,17 +16,24 @@
   "license": "MIT",
   "dependencies": {
     "@headlessui/react": "^2.1.8",
-    "@hookform/resolvers": "^3.9.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.20.0",
     "@tabler/icons-react": "^3.18.0",
+    "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "next": "14.2.13",
+    "next-auth": "4",
+    "nodemailer": "^6.9.15",
+    "path-to-regexp": "^6.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
+    "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.17.9",
     "@types/node": "^22.7.3",
     "@types/react": "^18",
