--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@
 DATABASE_URL="postgresql://postgres:yourpassword@localhost:5432/yourdb?schema=public"
 
 NEXTAUTH_URL=http://localhost:3000/api/auth
-SECRET=
+NEXTAUTH_SECRET=
