--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.20.0",
     "@tabler/icons-react": "^3.18.0",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query-devtools": "^5.58.0",
+    "@tanstack/react-table": "^8.20.5",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
@@ -29,10 +32,12 @@
     "path-to-regexp": "^6.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "superjson": "^2.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
+    "@tanstack/eslint-plugin-query": "^5.58.1",
     "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.17.9",
     "@types/node": "^22.7.3",
