--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postinstall": "bunx prisma generate",
     "prisma:generate": "bunx prisma generate",
     "prisma:studio": "bunx prisma studio",
     "db:migrate": "bunx prisma db push",
