--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-table": "^8.20.5",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "next": "14.2.13",
