--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-auth": "4",
     "nodemailer": "^6.9.15",
     "path-to-regexp": "^6.2.2",
+    "qs": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
     "superjson": "^2.2.1",
@@ -43,6 +44,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.17.9",
     "@types/node": "^22.7.3",
+    "@types/qs": "^6.9.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
